--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Hind&display=swap");
 .App {
-  text-align: center;
+  font-family: var(--font-family);
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
