--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -72,3 +72,30 @@
   flex-wrap: wrap;
   gap: 35px;
 }
+@media (max-width: 576px) {
+  .content {
+    display: none;
+  }
+  .footer-section {
+    display: block !important;
+  }
+  .main-content {
+    text-align: center !important;
+  }
+  .footer-section {
+    display: block;
+  }
+  .float-right {
+    float: left !important;
+  }
+}
+@media (max-width: 768px) {
+  .content {
+    display: none;
+  }
+}
+@media (max-width: 992px) {
+  .footers {
+    width: 90%;
+  }
+}
