--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -86,3 +86,69 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
+@media (max-width: 576px) {
+  .trending-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .promo-grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .bestselling-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .main-blog {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .description-grid {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    display: block;
+    margin: 20px;
+  }
+  .slick-active {
+    height: 40px !important;
+  }
+  .slick-arrow {
+    margin-left: 60px;
+    margin-right: 60px;
+    margin-top: -10px;
+    z-index: 1;
+  }
+}
+@media (max-width: 768px) {
+  .description-grid {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+  }
+  .sale {
+    grid-row: 1/2;
+    grid-column: 1/2;
+  }
+
+  .new {
+    grid-row: 2/2;
+    grid-column: 1/1;
+  }
+
+  .women {
+    grid-row: 1/3;
+    grid-column: 2/3;
+  }
+
+  .shoes {
+    grid-column: 1/3;
+    grid-row: 4/5;
+  }
+  .trending-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .promo-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .main-blog {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .bestselling-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
