--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -7,5 +7,55 @@
 }
 .items {
   position: absolute;
-  width: 90%;
+  width: 100%;
 }
+/* @media (max-width: 576px) {
+ .sliders-description{
+
+ }
+} */
+.sliders-description h1 {
+  font-size: 80px;
+  max-width: 600px;
+  margin: auto;
+  justify-content: center;
+}
+.sliders-description h3 {
+  font-size: 45px;
+}
+@media (max-width: 576px) {
+  .sliders-description h1 {
+    font-size: 19px !important;
+    max-width: 200px !important;
+  }
+  .sliders-description h3 {
+    font-size: 10px !important ;
+  }
+  .sliders-description p {
+    font-size: 8px;
+  }
+  .sliders-description Button {
+    width: 25% !important;
+    height: 30% !important;
+    font-size: 10px;
+  }
+}
+/* @media (max-width: 768px) and (max-width: 577px) {
+  .sliders-description h1 {
+    font-size: 39px !important;
+    max-width: 300px !important;
+  }
+  .sliders-description h3 {
+    font-size: 25px !important ;
+  }
+  .sliders-description p {
+    font-size: 13px;
+    font-weight: 400;
+  }
+  .sliders-description Button {
+    width: 25% !important;
+    height: 30% !important;
+    font-size: 10px;
+    margin-bottom: 20px;
+  }
+} */
