--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -14,6 +14,7 @@
 
  }
 } */
+
 .sliders-description h1 {
   font-size: 80px;
   max-width: 600px;
@@ -23,20 +24,23 @@
 .sliders-description h3 {
   font-size: 45px;
 }
+.sliders-description p {
+  font-size: 25px;
+}
 @media (max-width: 576px) {
   .sliders-description h1 {
-    font-size: 19px !important;
-    max-width: 200px !important;
+    font-size: 19px;
+    max-width: 200px;
   }
   .sliders-description h3 {
-    font-size: 10px !important ;
+    font-size: 10px;
   }
   .sliders-description p {
     font-size: 8px;
   }
   .sliders-description Button {
-    width: 25% !important;
-    height: 30% !important;
+    width: 25%;
+    height: 30%;
     font-size: 10px;
   }
 }
