--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -44,22 +44,22 @@
     font-size: 10px;
   }
 }
-/* @media (max-width: 768px) and (max-width: 577px) {
+@media (max-width: 768px) and (max-width: 577px) {
   .sliders-description h1 {
-    font-size: 39px !important;
-    max-width: 300px !important;
+    font-size: 20px !important;
+    max-width: 300px;
   }
   .sliders-description h3 {
-    font-size: 25px !important ;
+    font-size: 10px !important;
   }
   .sliders-description p {
     font-size: 13px;
     font-weight: 400;
   }
   .sliders-description Button {
-    width: 25% !important;
-    height: 30% !important;
+    width: 25%;
+    height: 30%;
     font-size: 10px;
     margin-bottom: 20px;
   }
-} */
+}
