--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -25,6 +25,7 @@
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(2, 1fr);
   gap: 20px;
+  margin-top: 30px;
 }
 .sale {
   grid-row: 1/2;
@@ -52,7 +53,11 @@
 }
 .trending-description {
   text-align: center;
-  margin-top: 30px;
+  margin-top: 45px;
+}
+.trending-description h1 {
+  font-size: 25px;
+  font-weight: 400;
 }
 .promo-grid {
   display: grid;
@@ -67,6 +72,7 @@
 .bestselling-header .selling-description {
   text-align: center;
   margin-bottom: 35px;
+  margin-top: 50px;
 }
 
 .selling-description h3 {
@@ -75,7 +81,8 @@
 }
 .selling-description h5 {
   font-size: 15px;
-  font-weight: 400px;
+  font-weight: 100px !important ;
+  opacity: 0.9;
 }
 .bestselling-grid {
   display: grid;
@@ -85,6 +92,18 @@
 .main-blog {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+}
+.main-section {
+  text-align: center;
+  margin-top: 60px;
+  margin-bottom: 40px;
+}
+.main-section h4 {
+  font-size: 22px;
+}
+.main-section h5 {
+  font-size: 15px;
+  font-weight: 400;
 }
 @media (max-width: 576px) {
   .trending-grid {
@@ -151,5 +170,11 @@
   }
   .bestselling-grid {
     grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 1024px) {
+  .slick-active {
+    height: 55px !important;
   }
 }
