--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -9,51 +9,63 @@
   position: absolute;
   width: 100%;
 }
-/* @media (max-width: 576px) {
- .sliders-description{
-
- }
-} */
 
 .sliders-description h1 {
-  font-size: 80px;
+  font-size: 77px;
   max-width: 600px;
   margin: auto;
   justify-content: center;
 }
 .sliders-description h3 {
-  font-size: 45px;
+  font-size: 40px;
 }
 .sliders-description p {
-  font-size: 25px;
+  font-size: 15px;
+  font-weight: 300;
+}
+.sliders-description {
+  animation-duration: 3s;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
+  from {
+    margin-bottom: 100%;
+  }
+
+  to {
+    margin-bottom: 0%;
+    width: 100%;
+  }
 }
 @media (max-width: 576px) {
   .sliders-description h1 {
-    font-size: 19px;
+    font-size: 10px !important;
     max-width: 200px;
-  }
-  .sliders-description h3 {
-    font-size: 10px;
-  }
-  .sliders-description p {
-    font-size: 8px;
-  }
-  .sliders-description Button {
-    width: 25%;
-    height: 30%;
-    font-size: 10px;
-  }
-}
-@media (max-width: 768px) and (max-width: 577px) {
-  .sliders-description h1 {
-    font-size: 20px !important;
-    max-width: 300px;
   }
   .sliders-description h3 {
     font-size: 10px !important;
   }
   .sliders-description p {
-    font-size: 13px;
+    font-size: 8px !important;
+  }
+  .sliders-description Button {
+    width: 25%;
+    height: 20%;
+    font-size: 10px;
+  }
+}
+
+@media (max-width: 768px) and (min-width: 577) {
+  .sliders-description h1 {
+    font-size: 40px !important;
+    max-width: 300px;
+  }
+  .sliders-description h3 {
+    font-size: 18px !important;
+  }
+  .sliders-description p {
+    font-size: 15px;
     font-weight: 400;
   }
   .sliders-description Button {
