--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,15 @@
   --primary-color: blue;
   --font-family: "Hind", sans-serif;
 }
+*::after,
+::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+html {
+  font-size: 60.5%;
+}
 
 body {
   margin: 0;
