--- a/src/styles/homePage.css
+++ b/src/styles/homePage.css
@@ -1,7 +1,7 @@
 .slick-arrow {
-  margin-left: 140px;
-  margin-right: 140px;
-  margin-top: -10px;
+  margin-left: 14rem;
+  margin-right: 14rem;
+  margin-top: -1rem;
   z-index: 1;
 }
 
@@ -45,33 +45,40 @@
 .shoes {
   grid-column: 3/5;
 }
-.trending-grid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 20px;
-  margin-top: 40px;
-}
-.trending-description {
+.Trending__title {
   text-align: center;
-  margin-top: 45px;
-}
-.trending-description h1 {
-  font-size: 25px;
-  font-weight: 400;
-}
-.promo-grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 40px;
 }
 
-.bestselling-header {
-  margin-top: 35px;
+.Trending__grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  margin: 8rem 4rem;
+}
+.Trending__title--h1 {
+  margin-top: 5rem;
+  font-size: 2.5rem;
+  font-weight: 400;
+}
+.Trending__title--p {
+  line-height: 3rem;
+  font-size: 1rem;
+}
+.Promo-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 9rem;
+  margin: 4rem;
+}
+
+.Bestselling__header {
+  margin-top: 4rem;
   letter-spacing: 1;
+  text-align: center;
 }
 .bestselling-header .selling-description {
   text-align: center;
-  margin-bottom: 35px;
+  margin-bottom: 350px;
   margin-top: 50px;
 }
 
@@ -86,8 +93,9 @@
 }
 .bestselling-grid {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
+  margin: 7rem;
 }
 .main-blog {
   display: grid;
@@ -106,14 +114,14 @@
   font-weight: 400;
 }
 @media (max-width: 576px) {
-  .trending-grid {
-    grid-template-columns: repeat(2, 1fr);
+  .Trending__grid {
+    display: block;
   }
-  .promo-grid {
-    grid-template-columns: repeat(1, 1fr);
+  .Promo-grid {
+    display: block;
   }
   .bestselling-grid {
-    grid-template-columns: repeat(2, 1fr);
+    display: block;
   }
   .main-blog {
     grid-template-columns: repeat(1, 1fr);
@@ -173,8 +181,8 @@
   }
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 1024px) {
   .slick-active {
-    height: 55px !important;
+    grid-template-columns: repeat(4, 1fr);
   }
 }
