--- a/src/styles/slider.css
+++ b/src/styles/slider.css
@@ -1,77 +1,64 @@
-.sliders {
+.Slider {
   position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
 }
-.items {
+.Slider__items {
   position: absolute;
-  width: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.Slider__description {
+  text-align: center;
+  animation: slidein 0.8s ease-out;
+}
+.Slider__description--title-2 {
+  font-size: 4rem;
+  margin-bottom: 2rem;
+  letter-spacing: 0.5rem;
+  font-weight: 500;
+}
+.Slider__description--title-1 {
+  font-size: 7rem;
+  margin-bottom: 3rem;
+  letter-spacing: 0.9rem;
+  line-height: 7rem;
+  font-weight: 600;
 }
 
-.sliders-description h1 {
-  font-size: 77px;
-  max-width: 600px;
-  margin: auto;
-  justify-content: center;
-}
-.sliders-description h3 {
-  font-size: 40px;
-}
-.sliders-description p {
-  font-size: 15px;
+.Slider__description--paragraph {
+  font-size: 1.9rem;
   font-weight: 300;
+  margin-bottom: 3rem;
 }
-.sliders-description {
-  animation-duration: 3s;
-  animation-name: slidein;
+.Slider__button {
+  font-size: 2rem !important;
+  font-weight: 500;
+  margin-bottom: 4rem;
 }
 
 @keyframes slidein {
-  from {
-    margin-bottom: 100%;
+  0% {
+    opacity: 0;
+    transform: translateY(-10rem);
   }
 
-  to {
+  100% {
     margin-bottom: 0%;
     width: 100%;
   }
 }
 @media (max-width: 576px) {
-  .sliders-description h1 {
-    font-size: 10px !important;
-    max-width: 200px;
-  }
-  .sliders-description h3 {
-    font-size: 10px !important;
-  }
-  .sliders-description p {
-    font-size: 8px !important;
-  }
-  .sliders-description Button {
-    width: 25%;
-    height: 20%;
-    font-size: 10px;
+  html {
+    font-size: 16.5%;
   }
 }
-
-@media (max-width: 768px) and (min-width: 577) {
-  .sliders-description h1 {
-    font-size: 40px !important;
-    max-width: 300px;
+@media (max-width: 767.98px) {
+  html {
+    font-size: 20%;
   }
-  .sliders-description h3 {
-    font-size: 18px !important;
-  }
-  .sliders-description p {
-    font-size: 15px;
-    font-weight: 400;
-  }
-  .sliders-description Button {
-    width: 25%;
-    height: 30%;
-    font-size: 10px;
-    margin-bottom: 20px;
+}
+@media (max-width: 991.98px) {
+  html {
+    font-size: 20%;
   }
 }
