--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,6 +1,6 @@
 .Footer {
   height: 10vh;
-  background-color: rgba(0, 0, 0, 0.45);
+  background-color: #ccc;
   margin-top: 10rem;
   display: flex;
   justify-content: center;
@@ -9,5 +9,5 @@
 .Footer__title {
   font-size: 1.6rem;
   font-weight: 400;
-  color: rgba(0, 0, 0, 0.8);
+  color: rgba(0, 0, 0, 0.5);
 }
